--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,30 @@
-body {
-  margin: 0 auto;
-  max-width: 50em;
-}
-body {
-  font-family: 'Helvetica', 'Arial', sans-serif;
-}
-body {
-  line-height: 1.5;
-  padding: 4em 1em;
+h1 {
+  color: blue;
 }
 
-h1 {
-  margin-top: 1em;
-  padding-top: 1em;
+h3 {
+color:brown;
 }
-body {
-  color: #555;
+.violet {
+color:  darkviolet;
 }
-h1 {
-  color: #333;
+.violet {
+color:  darkviolet;
 }
 
- code
- {
-  padding: 2px 4px;
-  vertical-align: text-top;
-  background: #eee;
+.yellow {
+color:   orange;
+}
+
+.yell {
+color:   orange;
+}
+.yell {
+color:   orange;
+}
+.yell {
+color:   orange;
+}
+.red {
+color:   red;
 }
