--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,25 @@ h1 {
 h3 {
 color:brown;
 }
+body {
+  margin: 0 auto;
+  max-width: 50em;
+}
+body {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+body {
+  line-height: 1.5;
+  padding: 4em 1em;
+}
+
+h1 {
+  margin-top: 1em;
+  padding-top: 1em;
+}
+body {
+  color: #555;
+}
 .violet {
 color:  darkviolet;
 }
