--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
+
+
 h1 {
+  margin-top: 1em;
+  padding-top: 1em;
+}h1 {
   color: blue;
 }
 
@@ -17,10 +22,6 @@ body {
   padding: 4em 1em;
 }
 
-h1 {
-  margin-top: 1em;
-  padding-top: 1em;
-}
 body {
   color: #555;
 }
