--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@ h1 {
   margin-top: 1em;
   padding-top: 1em;
 }h1 {
-  color: blue;
+  color: rgb(12, 143, 219);
 }
 
 h3 {
-color:brown;
+color:  rgb(50, 178, 221); 
+
 }
 body {
   margin: 0 auto;
@@ -47,4 +48,17 @@ color:   orange;
 }
 .red {
 color:   red;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  align-items: stretch;
+  color: green
+
+}
+.center-fit {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
 }
