--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,47 @@
-
-
-h1 {
-  margin-top: 1em;
-  padding-top: 1em;
-}h1 {
-  color: rgb(12, 143, 219);
+.center-fit {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
 }
+
+
+p {   
+  margin-top: 1em;
+  padding-top: 6em;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  
+  color: blue;
+}
+
+
+h4 {
+color: burlywood; 
+
+}
+
 
 h3 {
-color:  rgb(50, 178, 221); 
-
+  margin-top: 1em;
+  padding-top: 1em;
 }
-body {
+
+p {
   margin: 0 auto;
   max-width: 50em;
-}
-body {
-  font-family: 'Helvetica', 'Arial', sans-serif;
+  padding: 0em 1em;
+  font-family: 'Helvetica', 'Arial', sans-serif
 }
 body {
   line-height: 1.5;
-  padding: 4em 1em;
+  padding: 1em 1em;
+  margin: 0 auto;
+  max-width: 50em;
+  color: #555;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+
 }
 
-body {
-  color: #555;
-}
+
 .violet {
 color:  darkviolet;
 }
@@ -57,8 +73,12 @@ color:   red;
   color: green
 
 }
-.center-fit {
-  max-width: 100%;
-  max-height: 100vh;
-  margin: auto;
+
+.head {
+  
+  line-height: 1.5;
+  padding: 6em 1em;
+  position: static;
+  text-transform: uppercase;
+  font-family: "Times New Roman", Times, serif;
 }
