--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,58 @@
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+
 .center-fit {
   max-width: 100%;
   max-height: 100vh;
   margin: auto;
 }
 
-
-p {   
+h4 
+{
   margin-top: 1em;
-  padding-top: 6em;
-  font-family: 'Helvetica', 'Arial', sans-serif;
-  
-  color: blue;
-}
-
-
-h4 {
-color: burlywood; 
+  margin-right: 2em;
+  padding-top: 1em;
+  color: brown; 
 
 }
 
 
 h3 {
-  margin-top: 1em;
+  margin-top: .5em;
   padding-top: 1em;
+  color : darkcyan;
+  font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 p {
+  text-align: justify;
   margin: 0 auto;
   max-width: 50em;
   padding: 0em 1em;
-  font-family: 'Helvetica', 'Arial', sans-serif
+  font-family: 'Helvetica', 'Arial', sans-serif;
 }
 body {
   line-height: 1.5;
   padding: 1em 1em;
   margin: 0 auto;
   max-width: 50em;
-  color: #555;
+  color: rgb(16, 190, 243);
   font-family: 'Helvetica', 'Arial', sans-serif;
 
 }
@@ -73,6 +89,12 @@ color:   red;
   color: green
 
 }
+code
+   {
+    padding: 2px 4px;
+    vertical-align: text-top;
+    background: #eee;
+  }
 
 .head {
   
@@ -82,3 +104,5 @@ color:   red;
   text-transform: uppercase;
   font-family: "Times New Roman", Times, serif;
 }
+
+
