--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ code
   margin: 0 auto;
   max-width: 50em;
   padding: 0em 1em;
-  color:indigo;
+  color:#2C3E50   ;
   font-family: 'Helvetica', 'Arial', sans-serif;
 
 }
